--- a/styles/seccion/_presentacion.scss
+++ b/styles/seccion/_presentacion.scss
@@ -5,7 +5,7 @@
     grid-template-columns: repeat(12,1fr);
     grid-template-rows: repeat(12,1fr);
     height: 800px;
-    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url("../../img/hero.jpg");
+    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url("../../assets/hero.jpg");
     background-repeat: no-repeat;
     background-position: left top;
     background-size: 100%;
