--- a/styles/seccion/_seccion-planes.scss
+++ b/styles/seccion/_seccion-planes.scss
@@ -112,7 +112,7 @@
     border-radius: 15px;
     text-align: center;  
     width: 100%;
-    background-color: #f7f331;
+    background-color: #f8e91a;
 }
 .plan-gold li{
     color: white;
