--- a/styles/seccion/_preguntas.scss
+++ b/styles/seccion/_preguntas.scss
@@ -2,26 +2,32 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 100px;
-    padding: 10px;
-    border: 1px solid red;
+    padding: 100px 100px;
 }
-h2 {
+.container-preguntas h2 {
     color: rgb(10, 0, 0);
     font-size: 30px;
     cursor: pointer;
-    border: 1px solid black;
     padding-bottom: 15px;
     &:hover{
         color: rgb(255, 145, 0);
     }
-}
-.hidden{
-    padding: 10px;
-    display: none;
-    color: black;
-}
+    
 
-.show{
-    display: block;
+}
+.separador{
+    margin: 10px 0px;
+    border: 1px solid black;
+    width: 60%;
+}
+.container-preguntas > p {
+    color: black;
+    font-size: 15px;
+    padding: 1px;
+    text-align: center;
+}
+.container-preguntas > h1{
+    padding-bottom: 100px ;
+    text-align: center;
+    font-size: 60px;
 }
