--- a/styles/style.css
+++ b/styles/style.css
@@ -35,6 +35,7 @@ header img {
 header nav {
   display: flex;
   align-items: center;
+  justify-content: center;
   grid-column: 11;
 }
 
@@ -60,7 +61,7 @@ header a:hover {
   grid-template-columns: repeat(12, 1fr);
   grid-template-rows: repeat(12, 1fr);
   height: 800px;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../img/hero.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../assets/hero.jpg");
   background-repeat: no-repeat;
   background-position: left top;
   background-size: 100%;
@@ -235,7 +236,7 @@ header a:hover {
   grid-template-columns: repeat(12, 1fr);
   grid-template-rows: repeat(12, 1fr);
   height: 800px;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../img/hero.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../assets/hero.jpg");
   background-repeat: no-repeat;
   background-position: left top;
   background-size: 100%;
@@ -420,7 +421,7 @@ header a:hover {
   border-radius: 15px;
   text-align: center;
   width: 100%;
-  background-color: #f7f331;
+  background-color: #f8e91a;
 }
 
 .plan-gold li {
@@ -521,7 +522,7 @@ span {
 }
 
 .slider {
-  background-image: url(../../img/1.jfif);
+  background-image: url(../../assets/1.jfif);
   background-size: cover;
   width: 550px;
   height: 800px;
@@ -531,24 +532,24 @@ span {
 
 @keyframes animate {
   30% {
-    background-image: url("../../img/1.jfif");
+    background-image: url("../../assets/1.jfif");
     background-size: cover;
   }
   50% {
-    background-image: url("../../img/2.jfif");
+    background-image: url("../../assets/2.jfif");
     background-size: cover;
     background-position: center;
   }
   70% {
-    background-image: url("../../img/3.jfif");
+    background-image: url("../../assets/3.jfif");
     background-size: cover;
   }
   90% {
-    background-image: url("../../img/8.jfif");
+    background-image: url("../../assets/8.jfif");
     background-size: cover;
   }
   110% {
-    background-image: url("../../img/9.jfif");
+    background-image: url("../../assets/9.jfif");
     background-size: cover;
   }
 }
@@ -556,28 +557,34 @@ span {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 100px;
-  padding: 10px;
-  border: 1px solid red;
+  padding: 100px 100px;
 }
 
-h2 {
+.container-preguntas h2 {
   color: rgb(10, 0, 0);
   font-size: 30px;
   cursor: pointer;
-  border: 1px solid black;
   padding-bottom: 15px;
 }
-h2:hover {
+.container-preguntas h2:hover {
   color: rgb(255, 145, 0);
 }
 
-.hidden {
-  padding: 10px;
-  display: none;
-  color: black;
+.separador {
+  margin: 10px 0px;
+  border: 1px solid black;
+  width: 60%;
 }
 
-.show {
-  display: block;
+.container-preguntas > p {
+  color: black;
+  font-size: 15px;
+  padding: 1px;
+  text-align: center;
+}
+
+.container-preguntas > h1 {
+  padding-bottom: 100px;
+  text-align: center;
+  font-size: 60px;
 }/*# sourceMappingURL=style.css.map */
