se agrego las secciones actividades, beneficios y faqs usando bootstrap

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -9,3 +9,6 @@
 @import'./seccion/seccion-planes';
 @import'./seccion/actividades';
 @import'./seccion/preguntas';
+@import'./seccion/faqs';
+@import'./seccion/sobre-nosotros';
+@import'./seccion/beneficios';
