--- a/styles/seccion/_actividades.scss
+++ b/styles/seccion/_actividades.scss
@@ -22,15 +22,25 @@ span{
 }
 .slider-container{
     display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
     padding: 30px;
 }
+.container-img{
+    justify-content: center;
+}
+.container-img > img{
+    width: 20%;
+    padding: 5px;
+}
+/*
 .position{
     position: static;
     border-radius: 50px;
-
     
-
+    
+    
 }
 .slider{
     background-image: url(../../assets/1.jfif);
@@ -40,25 +50,25 @@ span{
     animation: animate 30s infinite;
     width: 50%;
     
-
+    
 }
 @keyframes animate{
     30%{
         background-image: url("../../assets/1.jfif");
         background-size: cover;
-
+        
     }
     50%{
         background-image: url("../../assets/2.jfif");
         background-size: cover;
         background-position: center;
-
+        
     }
     70%{
         background-image: url("../../assets/3.jfif");
         background-size: cover;
     }
-   
+    
     90%{
         background-image: url("../../assets/8.jfif");
         background-size: cover;
@@ -69,3 +79,4 @@ span{
     }
     
 }
+*/
