--- a/styles/seccion/_footer.scss
+++ b/styles/seccion/_footer.scss
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: row;
     justify-content:space-around;
-    height: 250px;
+    height: 500px;
     background-color: rgb(0, 0, 0);
     padding: 50px 0px;
 }
@@ -90,4 +90,9 @@
     justify-content: center;
     text-align: center;
     padding: 10px 0px;
+}
+.ico{
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
 }
