--- a/styles/style.css
+++ b/styles/style.css
@@ -27,7 +27,7 @@ header .logo {
 }
 
 header img {
-  width: 70px;
+  width: 120px;
   padding-left: 30px;
   padding-right: 30px;
 }
@@ -67,6 +67,7 @@ header a:hover {
   background-size: 100%;
   margin: 0;
   padding: 0;
+  min-width: 1200px;
 }
 
 .titulo {
@@ -132,7 +133,7 @@ header a:hover {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  height: 250px;
+  height: 500px;
   background-color: rgb(0, 0, 0);
   padding: 50px 0px;
 }
@@ -230,6 +231,12 @@ header a:hover {
   padding: 10px 0px;
 }
 
+.ico {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+
 /* presentacion */
 .presentacion {
   display: grid;
@@ -242,6 +249,7 @@ header a:hover {
   background-size: 100%;
   margin: 0;
   padding: 0;
+  min-width: 1200px;
 }
 
 .titulo {
@@ -512,47 +520,67 @@ span {
 
 .slider-container {
   display: flex;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
   padding: 30px;
 }
 
-.position {
-  position: static;
-  border-radius: 50px;
+.container-img {
+  justify-content: center;
 }
 
-.slider {
-  background-image: url(../../assets/1.jfif);
-  background-size: cover;
-  width: 550px;
-  height: 800px;
-  animation: animate 30s infinite;
-  width: 50%;
+.container-img > img {
+  width: 20%;
+  padding: 5px;
 }
 
-@keyframes animate {
-  30% {
-    background-image: url("../../assets/1.jfif");
-    background-size: cover;
-  }
-  50% {
-    background-image: url("../../assets/2.jfif");
-    background-size: cover;
-    background-position: center;
-  }
-  70% {
-    background-image: url("../../assets/3.jfif");
-    background-size: cover;
-  }
-  90% {
-    background-image: url("../../assets/8.jfif");
-    background-size: cover;
-  }
-  110% {
-    background-image: url("../../assets/9.jfif");
-    background-size: cover;
-  }
+/*
+.position{
+    position: static;
+    border-radius: 50px;
+
+
+
 }
+.slider{
+    background-image: url(../../assets/1.jfif);
+    background-size: cover;
+    width: 550px;
+    height: 800px;
+    animation: animate 30s infinite;
+    width: 50%;
+
+
+}
+@keyframes animate{
+    30%{
+        background-image: url("../../assets/1.jfif");
+        background-size: cover;
+
+    }
+    50%{
+        background-image: url("../../assets/2.jfif");
+        background-size: cover;
+        background-position: center;
+
+    }
+    70%{
+        background-image: url("../../assets/3.jfif");
+        background-size: cover;
+    }
+
+    90%{
+        background-image: url("../../assets/8.jfif");
+        background-size: cover;
+    }
+    110%{
+        background-image: url("../../assets/9.jfif");
+        background-size: cover;
+    }
+
+}
+*/
 .container-preguntas {
   display: flex;
   flex-direction: column;
@@ -587,4 +615,58 @@ span {
   padding-bottom: 100px;
   text-align: center;
   font-size: 60px;
+}
+
+.faqs {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 50px;
+}
+
+.faqs h1 {
+  padding: 50px;
+  text-align: center;
+  font-size: 60px;
+}
+
+.sobre-nosotros {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: red;
+  padding: 50px;
+}
+
+.beneficios {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.beneficios-card {
+  display: flex;
+  flex-direction: row;
+  padding-left: 50px;
+}
+
+.beneficios h1 {
+  padding-top: 50px;
+  text-align: center;
+  font-size: 60px;
+}
+
+.beneficios-card .card > img {
+  width: 350px;
+}
+
+.card-body {
+  width: 100%;
+}
+
+.card {
+  width: 350px;
 }/*# sourceMappingURL=style.css.map */
