--- a/styles/style.css
+++ b/styles/style.css
@@ -157,7 +157,12 @@ header a:hover {
 .sobrenosotros h2,
 .contacto h2 {
   font-size: 40px;
-  color: white;
+  color: rgb(250, 250, 250);
+}
+
+.contacto h2:hover {
+  color: rgb(255, 0, 0);
+  cursor: pointer;
 }
 
 .contacto h4 {
@@ -235,6 +240,83 @@ header a:hover {
   display: flex;
   justify-content: flex-end;
   align-items: flex-end;
+}
+
+.Cxit {
+  position: absolute;
+  background-color: #52e617;
+  width: 150px;
+  height: 80px;
+  left: 35%;
+  top: 40%;
+  text-align: center;
+  text-justify: distribute;
+  text-shadow: #8e8f8d;
+  z-index: 2;
+}
+
+.btn1 {
+  background-color: #dff70d;
+  width: 30vw;
+  height: 5vh;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+/* Estilos para el modal */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-body {
+  width: 500px;
+}
+
+.form-control {
+  height: 40px;
+  background-image: linear-gradient(rgba(247, 197, 90, 0.8274509804), #fffffe, #fcfd99);
+}
+
+.modal-header {
+  height: 100px;
+  text-align: center;
+}
+
+.modal-dialog {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal-contenido {
+  background-color: #f30000;
+  margin-top: 20px;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 100%;
+}
+
+.cerrar-modal {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.cerrar-modal:hover,
+.cerrar-modal:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 /* presentacion */
@@ -528,6 +610,8 @@ span {
 
 .container-img {
   justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .container-img > img {
@@ -631,6 +715,11 @@ span {
   font-size: 60px;
 }
 
+.accordion-button:hover {
+  font-weight: bold;
+  transition: 0.3s;
+}
+
 .sobre-nosotros {
   display: flex;
   flex-direction: column;
@@ -650,11 +739,19 @@ span {
 .beneficios-card {
   display: flex;
   flex-direction: row;
-  padding-left: 50px;
+  padding-left: 10px;
+}
+
+.titulo-beneficios {
+  padding: 50px;
+}
+
+.card a {
+  text-decoration: none;
+  color: black;
 }
 
 .beneficios h1 {
-  padding-top: 50px;
   text-align: center;
   font-size: 60px;
 }
@@ -668,5 +765,14 @@ span {
 }
 
 .card {
-  width: 350px;
+  width: 200px;
+  font-size: 20px;
+  text-align: center;
+}
+
+.card:hover {
+  cursor: pointer;
+  transition: 0.3s;
+  box-shadow: 0px 5px 10px rgb(100, 100, 100);
+  font-weight: bold;
 }/*# sourceMappingURL=style.css.map */
