--- a/styles/seccion/_footer.scss
+++ b/styles/seccion/_footer.scss
@@ -22,11 +22,18 @@
     align-items: center;
     
 }
+
+
 .sobrenosotros h2,
 .contacto h2 {
     font-size: 40px;
-    color: white;
+    color: rgb(250, 250, 250);
+
    
+}
+.contacto h2:hover{
+    color: rgb(255, 0, 0);
+    cursor: pointer;
 }
 .contacto h4{
     padding-top: 10px;
@@ -95,4 +102,99 @@
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
+}
+// nuevo            
+// .ccol {
+// color: #ebb216; 
+// text-align: center;
+// margin-top: 45px; 
+// }
+.Cxit{
+ position: absolute;
+background-color: #52e617;
+width: 150px;
+height: 80px;
+left: 35%;
+top: 40%;
+text-align: center;
+text-justify: distribute;
+text-shadow: #8e8f8d;
+z-index: 2;
+         }
+// .Telco{
+// color: #ff040473;
+// }
+// .Redes{
+// color: #f0a61e;
+// position: relative;
+// left: 100px;
+// bottom: 60px;
+// font-size: larger;
+// }
+
+// .contacto{
+//  display: relative;
+// }
+.btn1{
+background-color: #dff70d;
+width: 30vw;
+height: 5vh;
+justify-content: center;
+align-items: center;
+text-align: center;
+}
+
+/* Estilos para el modal */
+.modal {
+display: none;
+position: fixed;
+z-index: 1;
+left: 0;
+top: 0;
+width: 100%;
+height: 100%;
+overflow: auto;
+background-color: rgba(0, 0, 0, 0.4);
+}
+.modal-body{
+width: 500px;
+}
+.form-control{
+height: 40px;
+background-image: linear-gradient( #f7c55ad3, #fffffe,#fcfd99);  
+}
+
+.modal-header{
+height: 100px;
+text-align: center;
+}
+
+.modal-dialog {
+display: flex;
+align-items: center;
+justify-content: center;
+// min-height: calc(100vh - 3.5rem);   
+}
+
+.modal-contenido {
+background-color: #f30000;
+margin-top: 20px;
+padding: 20px;
+border: 1px solid #888;
+width: 100%;
+
+}
+
+.cerrar-modal {
+color: #aaa;
+float: right;
+font-size: 28px;
+font-weight: bold;
+}
+
+.cerrar-modal:hover,
+.cerrar-modal:focus {
+color: black;
+text-decoration: none;
+cursor: pointer;
 }
