--- a/styles/style.css
+++ b/styles/style.css
@@ -407,172 +407,167 @@ header a:hover {
 }
 
 /*elegi tu plan*/
-.plan-titulo {
-  width: 100%;
-  padding: 50px 0px;
+.planes {
+  display:  flex;
+  justify-content: space-around;
+  padding-bottom: 100px;
+  padding-top: 40px;
 }
-
-.plan-titulo h3 {
-  text-align: center;
+.division{
+  margin-top: 20px;
+  margin-bottom:  20px;
+  border-top: 1px solid orange;
+}
+/*elegi tu plan*/
+.plan-titulo{
+  width: 100%;
+  padding: 50px 0px;  
+}
+.plan-titulo h3{
+  text-align:center;
   font-size: 60px;
 }
-
-.plan-titulo p {
+.plan-titulo p{
   font-size: 20px;
   padding: 20px 0px;
   text-align: center;
 }
-
 /* plan silver */
-.plan-silver {
-  border: 3px solid white;
-  background-color: rgba(31, 31, 31, 0.87);
-  box-shadow: 5px 10px 20px #000;
-  border-radius: 20px;
+.plan-silver{
+  border: 1px solid orange;
+  background-color: rgba(0, 0, 0, 0.932);
+  box-shadow: 5px  10px 20px #000;
   padding: 20px 10px;
   text-align: center;
   width: 20%;
+  
 }
-
-.plan-silver h3 {
+.plan-silver h3{
   margin: 0px 10px;
   padding-bottom: 10px;
-  font-size: 35px;
+  font-size: 45px;
   text-align: center;
-  color: white;
+  color: orange;
 }
-
-.plan-silver p {
+.plan-silver p{
   font-size: 25px;
   color: white;
   padding-bottom: 20px;
   text-align: center;
 }
-
-.plan-silver button {
-  color: black;
+.plan-silver button{
+  color: orange;
   font-size: 20px;
   font-weight: bold;
   padding: 10px;
   border-radius: 15px;
-  text-align: center;
-  width: 100%;
-  background-color: #1fe1ba;
-}
+  text-align: center;  
+  width: 65%;
+  background-color: rgba(0, 0, 0, 0.932);;
+  margin-top: 80%;
 
-.plan-silver a {
+}
+.plan-silver a{
   color: black;
   text-decoration: none;
 }
-
-.plan-silver li {
+.plan-silver li{
   color: white;
   padding-top: 10px;
   text-align: start;
-  padding-left: 15px;
+  padding-left: 15px;   
 }
-
-.plan-silver button:hover {
+.plan-silver button:hover{
   color: white;
   cursor: pointer;
 }
-
 /* plan gold*/
-.plan-gold {
-  border: 3px solid white;
-  background-color: rgba(31, 31, 31, 0.87);
-  box-shadow: 5px 10px 20px #000;
-  border-radius: 20px;
+.plan-gold{
+  border: 1px solid orange;
+  background-color: rgba(0, 0, 0, 0.932);
+  box-shadow: 5px  10px 20px #000;
   padding: 20px 10px;
   text-align: center;
-  width: 20%;
+  width: 20%; 
 }
-
-.plan-gold h3 {
+.plan-gold h3{
   margin: 0px 10px;
   padding-bottom: 10px;
-  font-size: 35px;
+  font-size: 45px;
   text-align: center;
-  color: white;
+  color: orange;
 }
-
-.plan-gold p {
+.plan-gold p{
   font-size: 25px;
   color: white;
   padding-bottom: 20px;
   text-align: center;
 }
 
-.plan-gold button {
-  color: black;
+.plan-gold button{
+  color: orange;
   font-size: 20px;
   font-weight: bold;
   padding: 10px;
   border-radius: 15px;
-  text-align: center;
-  width: 100%;
-  background-color: #f8e91a;
+  text-align: center;  
+  width: 65%;
+  background-color: rgba(0, 0, 0, 0.932);;
+  margin-top: 50%;
 }
-
-.plan-gold li {
+.plan-gold li{
   color: white;
   padding-top: 10px;
   text-align: start;
-  padding-left: 15px;
+  padding-left: 15px;   
 }
-
-.plan-gold button:hover {
+.plan-gold button:hover{
   color: white;
   cursor: pointer;
 }
-
 /* plan platinum*/
-.plan-platinum {
-  border: 3px solid white;
-  background-color: rgba(31, 31, 31, 0.87);
-  box-shadow: 5px 10px 20px #000;
-  border-radius: 20px;
+.plan-platinum{
+  border: 1px solid orange;
+  background-color: rgba(0, 0, 0, 0.932);
+  box-shadow: 5px  10px 20px #000;
   padding: 20px 10px;
   text-align: center;
   width: 20%;
 }
-
-.plan-platinum h3 {
+.plan-platinum h3{
   margin: 0px 10px;
   padding-bottom: 10px;
-  font-size: 35px;
+  font-size: 45px;
   text-align: center;
-  color: white;
+  color: orange;
 }
-
-.plan-platinum p {
+.plan-platinum p{
   font-size: 25px;
   color: white;
   padding-bottom: 20px;
   text-align: center;
 }
-
-.plan-platinum button {
-  color: black;
+.plan-platinum button{
+  color: orange;
   font-size: 20px;
   font-weight: bold;
   padding: 10px;
   border-radius: 15px;
-  text-align: center;
-  width: 100%;
-  background-color: #b62eec;
+  text-align: center;  
+  width: 65%;
+  background-color: rgba(0, 0, 0, 0.932);;
+  margin-top: 10%;
 }
-
-.plan-platinum li {
+.plan-platinum li{
   color: white;
   padding-top: 10px;
   text-align: start;
-  padding-left: 15px;
+  padding-left: 15px;   
 }
-
-.plan-platinum button:hover {
+.plan-platinum button:hover{
   color: white;
   cursor: pointer;
+
 }
 
 /* seccion de actividades*/
