--- a/styles/style.css
+++ b/styles/style.css
@@ -426,6 +426,7 @@ header a:hover {
 .plan-titulo h3{
   text-align:center;
   font-size: 60px;
+  color: orange;
 }
 .plan-titulo p{
   font-size: 20px;
