titulo de planes y parrafo , responsive
titulo y plan , responsive

--- a/styles/style.css
+++ b/styles/style.css
@@ -599,6 +599,14 @@ header a:hover {
   .plan-silver li, .plan-gold li, .plan-platinum li {
       font-size: 10px;
   }
+
+  .plan-titulo p {
+    font-size: 15px;
+  }
+
+  .plan-titulo h3 {
+    font-size: 45px;
+  }
 }
 
 /* seccion de actividades*/
