--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,7 @@
   font-family: "Roboto", sans-serif;
   margin: 0;
   padding: 0;
-}
+} 
 
 header {
   height: 80px;
@@ -53,6 +53,34 @@ header a {
 header a:hover {
   color: red;
   transform: translateY(-3px) scale(1.1);
+}
+@media (max-width: 800px) {
+
+  header nav {
+    display: flex;
+    
+  }
+.nav-item a {
+  font-size: 15px;
+}
+
+}
+@media (max-width: 600px) {
+
+  header nav {
+    display: flex;
+    
+  }
+  header img {
+    display: none;
+  }
+  .nav-item a {
+    font-size: 15px;
+  }
+  .navbar-toggler-icon{
+    font-size: 15px;
+  }
+  
 }
 
 /* presentacion */
@@ -127,7 +155,128 @@ header a:hover {
   color: rgba(247, 8, 60, 0.973);
   cursor: pointer;
 }
+@media (max-width: 800px) {
 
+  .titulo {
+    display: grid;
+    grid-column-start: 2;
+    grid-row-start: 6;
+  }
+  
+  .titulo h1 {
+    color: orange;
+    font-family: "Roboto", sans-serif;
+    font-size: 80px;
+    font-weight: 500;
+  }
+  
+  .titulo span {
+    color: white;
+    font-size: 80px;
+  }
+  
+  .subtitulo {
+    display: grid;
+    grid-column-start: 2;
+    grid-row-start: 7;
+  }
+  
+  .subtitulo p {
+    color: white;
+    font-family: "Roboto", sans-serif;
+    font-size: 25px;
+    font-weight: 100;
+    text-align: center;
+  }
+  
+  .registro {
+    display: grid;
+    grid-column-start: 2;
+    grid-row-start: 9;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .registro a, .asociate {
+    text-decoration: none;
+    color: white;
+    font-size: 30px;
+    font-weight: 500;
+    border: 1px solid white;
+    border-radius: 15px;
+    background-color: transparent;
+    padding: 10px;
+    display: block;
+  }
+  
+  .registro a, .asociate:hover {
+    color: rgba(247, 8, 60, 0.973);
+    cursor: pointer;
+  }
+
+}
+@media (max-width: 600px) {
+
+  .titulo {
+    display: grid;
+    grid-column-start: 2;
+    grid-row-start: 6;
+  }
+  
+  .titulo h1 {
+    color: orange;
+    font-family: "Roboto", sans-serif;
+    font-size: 70px;
+    font-weight: 500;
+  }
+  
+  .titulo span {
+    color: white;
+    font-size: 70px;
+  }
+  
+  .subtitulo {
+    display: grid;
+    grid-column-start: 2;
+    grid-row-start: 7;
+  }
+  
+  .subtitulo p {
+    color: white;
+    font-family: "Roboto", sans-serif;
+    font-size: 20px;
+    font-weight: 100;
+    text-align: center;
+  }
+  
+  .registro {
+    display: grid;
+    grid-column-start: 2;
+    grid-row-start: 9;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .registro a, .asociate {
+    text-decoration: none;
+    color: white;
+    font-size: 30px;
+    font-weight: 500;
+    border: 1px solid white;
+    border-radius: 15px;
+    background-color: transparent;
+    padding: 10px;
+    display: block;
+  }
+  
+  .registro a, .asociate:hover {
+    color: rgba(247, 8, 60, 0.973);
+    cursor: pointer;
+  }
+
+}
 .contenedor-footer {
   width: 100%;
   display: flex;
@@ -225,6 +374,122 @@ header a:hover {
   background: rgba(18, 152, 230, 0.753);
 }
 
+@media (max-width: 1000px) {
+  .contenedor-footer {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    height: 500px;
+    background-color: rgb(0, 0, 0);
+    padding: 50px 0px;
+  }
+  
+  .contenedor-footer{
+    display: flex;
+    flex-direction: column;
+  }
+  .sobrenosotros {
+    border: 1px solid white;
+    margin: 5px;
+    padding: 20px 50px;
+  }
+  
+  .sobrenosotros,
+  .contacto {
+    width: 30%;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .sobrenosotros h2,
+  .contacto h2 {
+    font-size: 40px;
+    color: rgb(250, 250, 250);
+  }
+  
+  .contacto h2:hover {
+    color: rgb(255, 0, 0);
+    cursor: pointer;
+  }
+  
+  .contacto h4 {
+    padding-top: 10px;
+    color: white;
+  }
+  
+  .sobrenosotros p,
+  .contacto p {
+    color: white;
+    font-size: 15px;
+    font-weight: 100;
+    padding: 10px 0px;
+  }
+  .redes-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px 0px;
+  }
+  
+  .redes-container ul li {
+    display: inline-block;
+    margin: 0px 5px;
+    width: 50px;
+    height: 10px;
+    text-align: center;
+  }
+  
+  .redes-container ul li a {
+    display: block;
+    padding: 0px 0px;
+    background: #333;
+    border-radius: 100px;
+    color: rgb(255, 255, 255);
+    line-height: 50px;
+    font-size: 15px;
+    transform: 0.5s;
+  }
+  
+  
+
+}
+@media (max-width: 600px) {
+
+  .contenedor-footer{
+    display: flex;
+    flex-direction: column;
+  }
+  .redes-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px 0px;
+  }
+  
+  .redes-container ul li {
+    display: inline-block;
+    margin: 0px 5px;
+    width: 50px;
+    height: 10px;
+    text-align: center;
+  }
+  
+  .redes-container ul li a {
+    display: block;
+    padding: 0px 0px;
+    background: #333;
+    border-radius: 100px;
+    color: rgb(255, 255, 255);
+    line-height: 50px;
+    font-size: 15px;
+    transform: 0.5s;
+  }
+
+}
 .sub-footer {
   color: white;
   background-color: red;
@@ -320,7 +585,7 @@ header a:hover {
 }
 
 /* presentacion */
-.presentacion {
+/* .presentacion {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   grid-template-rows: repeat(12, 1fr);
@@ -390,7 +655,7 @@ header a:hover {
 .registro a, .asociate:hover {
   color: rgba(247, 8, 60, 0.973);
   cursor: pointer;
-}
+} */
 
 /* seccion de planes */
 .planes {
@@ -643,62 +908,23 @@ span {
 }
 
 .container-img {
+  display: flex;
   justify-content: center;
+  padding: 0 10px;
+}
+.contenedor-actividades{
   display: flex;
   flex-wrap: wrap;
-}
+  justify-content: center;
 
+}
 .container-img > img {
-  width: 20%;
+  width: 250px;
   padding: 5px;
-}
-
-/*
-.position{
-    position: static;
-    border-radius: 50px;
-
-
 
 }
-.slider{
-    background-image: url(../../assets/1.jfif);
-    background-size: cover;
-    width: 550px;
-    height: 800px;
-    animation: animate 30s infinite;
-    width: 50%;
 
 
-}
-@keyframes animate{
-    30%{
-        background-image: url("../../assets/1.jfif");
-        background-size: cover;
-
-    }
-    50%{
-        background-image: url("../../assets/2.jfif");
-        background-size: cover;
-        background-position: center;
-
-    }
-    70%{
-        background-image: url("../../assets/3.jfif");
-        background-size: cover;
-    }
-
-    90%{
-        background-image: url("../../assets/8.jfif");
-        background-size: cover;
-    }
-    110%{
-        background-image: url("../../assets/9.jfif");
-        background-size: cover;
-    }
-
-}
-*/
 .container-preguntas {
   display: flex;
   flex-direction: column;
@@ -763,6 +989,7 @@ span {
   padding: 50px;
 }
 
+
 .beneficios {
   display: flex;
   flex-direction: column;
@@ -774,6 +1001,7 @@ span {
   display: flex;
   flex-direction: row;
   padding-left: 10px;
+
 }
 
 .titulo-beneficios {
@@ -791,17 +1019,19 @@ span {
 }
 
 .beneficios-card .card > img {
-  width: 350px;
+  width: 250px;
 }
 
 .card-body {
   width: 100%;
+
 }
 
 .card {
-  width: 200px;
+  width: 250px;
   font-size: 20px;
   text-align: center;
+
 }
 
 .card:hover {
@@ -810,3 +1040,15 @@ span {
   box-shadow: 0px 5px 10px rgb(100, 100, 100);
   font-weight: bold;
 }/*# sourceMappingURL=style.css.map */
+
+@media (max-width: 800px) {
+  .beneficios-card {
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 10px;
+  }
+
+}
