--- a/styles/style.css
+++ b/styles/style.css
@@ -2,41 +2,33 @@
   font-family: "Roboto", sans-serif;
   margin: 0;
   padding: 0;
-} 
+}
 
 header {
   height: 80px;
   background-color: rgb(255, 255, 255);
   position: fixed;
   z-index: 10;
-}
 
-header .container2 {
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  align-items: center;
 }
+.navbar-toggler{
+display: none;}
 
+.tituloLogo{
+  display: flex;
+}
 header .logo {
   margin: 0;
-  padding: 10px 0px;
   font-weight: 500;
   color: orange;
   font-size: 50px;
-  grid-column: 2;
+
 }
 
 header img {
   width: 120px;
   padding-left: 30px;
   padding-right: 30px;
-}
-
-header nav {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  grid-column: 11;
 }
 
 header a {
@@ -49,19 +41,46 @@ header a {
   line-height: 30px;
   transform: 0.5s;
 }
-
 header a:hover {
   color: red;
   transform: translateY(-3px) scale(1.1);
 }
-@media (max-width: 800px) {
+
+/* header nav {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+*/
+
+@media (max-width: 850px) {
+
+  .enlaces{
+    display: none
+  }
+  .navbar-toggler{
+    display: inline;}
 
   header nav {
     display: flex;
-    
+
   }
 .nav-item a {
-  font-size: 15px;
+  font-size: 20px;
+}
+.navbar-toggler-icon{
+  font-size: 20px;
+}
+.menu > ul > li > a{
+  color: rgb(0, 0, 0);
+
+
+}
+.menu > ul > li > a:hover{
+  color: red;
+  padding: 10px;
+  font-weight: bold;
 }
 
 }
@@ -69,7 +88,7 @@ header a:hover {
 
   header nav {
     display: flex;
-    
+
   }
   header img {
     display: none;
@@ -78,9 +97,20 @@ header a:hover {
     font-size: 15px;
   }
   .navbar-toggler-icon{
-    font-size: 15px;
+    font-size: 18px;
   }
-  
+  .menu > ul > li > a{
+    color: rgb(0, 0, 0);
+
+
+  }
+  .menu > ul > li > a:hover{
+    color: red;
+    padding: 10px;
+    font-weight: bold;
+
+  }
+
 }
 
 /* presentacion */
@@ -92,10 +122,9 @@ header a:hover {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../assets/hero.jpg");
   background-repeat: no-repeat;
   background-position: left top;
-  background-size: 100%;
+  background-size: cover;
   margin: 0;
   padding: 0;
-  min-width: 1200px;
 }
 
 .titulo {
@@ -162,25 +191,25 @@ header a:hover {
     grid-column-start: 2;
     grid-row-start: 6;
   }
-  
+
   .titulo h1 {
     color: orange;
     font-family: "Roboto", sans-serif;
     font-size: 80px;
     font-weight: 500;
   }
-  
+
   .titulo span {
     color: white;
     font-size: 80px;
   }
-  
+
   .subtitulo {
     display: grid;
     grid-column-start: 2;
     grid-row-start: 7;
   }
-  
+
   .subtitulo p {
     color: white;
     font-family: "Roboto", sans-serif;
@@ -188,7 +217,7 @@ header a:hover {
     font-weight: 100;
     text-align: center;
   }
-  
+
   .registro {
     display: grid;
     grid-column-start: 2;
@@ -197,7 +226,7 @@ header a:hover {
     justify-content: center;
     align-items: center;
   }
-  
+
   .registro a, .asociate {
     text-decoration: none;
     color: white;
@@ -209,7 +238,7 @@ header a:hover {
     padding: 10px;
     display: block;
   }
-  
+
   .registro a, .asociate:hover {
     color: rgba(247, 8, 60, 0.973);
     cursor: pointer;
@@ -223,25 +252,25 @@ header a:hover {
     grid-column-start: 2;
     grid-row-start: 6;
   }
-  
+
   .titulo h1 {
     color: orange;
     font-family: "Roboto", sans-serif;
     font-size: 70px;
     font-weight: 500;
   }
-  
+
   .titulo span {
     color: white;
     font-size: 70px;
   }
-  
+
   .subtitulo {
     display: grid;
     grid-column-start: 2;
     grid-row-start: 7;
   }
-  
+
   .subtitulo p {
     color: white;
     font-family: "Roboto", sans-serif;
@@ -249,7 +278,7 @@ header a:hover {
     font-weight: 100;
     text-align: center;
   }
-  
+
   .registro {
     display: grid;
     grid-column-start: 2;
@@ -258,7 +287,7 @@ header a:hover {
     justify-content: center;
     align-items: center;
   }
-  
+
   .registro a, .asociate {
     text-decoration: none;
     color: white;
@@ -270,13 +299,15 @@ header a:hover {
     padding: 10px;
     display: block;
   }
-  
+
   .registro a, .asociate:hover {
     color: rgba(247, 8, 60, 0.973);
     cursor: pointer;
   }
 
 }
+
+/* footer */
 .contenedor-footer {
   width: 100%;
   display: flex;
@@ -384,7 +415,7 @@ header a:hover {
     background-color: rgb(0, 0, 0);
     padding: 50px 0px;
   }
-  
+
   .contenedor-footer{
     display: flex;
     flex-direction: column;
@@ -394,7 +425,7 @@ header a:hover {
     margin: 5px;
     padding: 20px 50px;
   }
-  
+
   .sobrenosotros,
   .contacto {
     width: 30%;
@@ -404,23 +435,23 @@ header a:hover {
     justify-content: center;
     align-items: center;
   }
-  
+
   .sobrenosotros h2,
   .contacto h2 {
     font-size: 40px;
     color: rgb(250, 250, 250);
   }
-  
+
   .contacto h2:hover {
     color: rgb(255, 0, 0);
     cursor: pointer;
   }
-  
+
   .contacto h4 {
     padding-top: 10px;
     color: white;
   }
-  
+
   .sobrenosotros p,
   .contacto p {
     color: white;
@@ -434,7 +465,7 @@ header a:hover {
     justify-content: center;
     padding: 20px 0px;
   }
-  
+
   .redes-container ul li {
     display: inline-block;
     margin: 0px 5px;
@@ -442,7 +473,7 @@ header a:hover {
     height: 10px;
     text-align: center;
   }
-  
+
   .redes-container ul li a {
     display: block;
     padding: 0px 0px;
@@ -453,8 +484,8 @@ header a:hover {
     font-size: 15px;
     transform: 0.5s;
   }
-  
-  
+
+
 
 }
 @media (max-width: 600px) {
@@ -469,7 +500,7 @@ header a:hover {
     justify-content: center;
     padding: 20px 0px;
   }
-  
+
   .redes-container ul li {
     display: inline-block;
     margin: 0px 5px;
@@ -477,7 +508,7 @@ header a:hover {
     height: 10px;
     text-align: center;
   }
-  
+
   .redes-container ul li a {
     display: block;
     padding: 0px 0px;
@@ -584,78 +615,6 @@ header a:hover {
   cursor: pointer;
 }
 
-/* presentacion */
-/* .presentacion {
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: repeat(12, 1fr);
-  height: 800px;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../assets/hero.jpg");
-  background-repeat: no-repeat;
-  background-position: left top;
-  background-size: 100%;
-  margin: 0;
-  padding: 0;
-  min-width: 1200px;
-}
-
-.titulo {
-  display: grid;
-  grid-column-start: 2;
-  grid-row-start: 6;
-}
-
-.titulo h1 {
-  color: orange;
-  font-family: "Roboto", sans-serif;
-  font-size: 90px;
-  font-weight: 500;
-}
-
-.titulo span {
-  color: white;
-  font-size: 90px;
-}
-
-.subtitulo {
-  display: grid;
-  grid-column-start: 2;
-  grid-row-start: 7;
-}
-
-.subtitulo p {
-  color: white;
-  font-family: "Roboto", sans-serif;
-  font-size: 30px;
-  font-weight: 100;
-  text-align: center;
-}
-
-.registro {
-  display: grid;
-  grid-column-start: 2;
-  grid-row-start: 9;
-  text-align: center;
-  justify-content: center;
-  align-items: center;
-}
-
-.registro a, .asociate {
-  text-decoration: none;
-  color: white;
-  font-size: 30px;
-  font-weight: 500;
-  border: 1px solid white;
-  border-radius: 15px;
-  background-color: transparent;
-  padding: 10px;
-  display: block;
-}
-
-.registro a, .asociate:hover {
-  color: rgba(247, 8, 60, 0.973);
-  cursor: pointer;
-} */
 
 /* seccion de planes */
 .planes {
@@ -686,7 +645,7 @@ header a:hover {
 /*elegi tu plan*/
 .plan-titulo{
   width: 100%;
-  padding: 50px 0px;  
+  padding: 50px 0px;
 }
 .plan-titulo h3{
   text-align:center;
@@ -706,7 +665,7 @@ header a:hover {
   padding: 20px 10px;
   text-align: center;
   width: 20%;
-  
+
 }
 .plan-silver h3{
   margin: 0px 10px;
@@ -727,7 +686,7 @@ header a:hover {
   font-weight: bold;
   padding: 10px;
   border-radius: 15px;
-  text-align: center;  
+  text-align: center;
   width: 65%;
   background-color: rgba(0, 0, 0, 0.932);;
   margin-top: 80%;
@@ -741,7 +700,7 @@ header a:hover {
   color: white;
   padding-top: 10px;
   text-align: start;
-  padding-left: 15px;   
+  padding-left: 15px;
 }
 .plan-silver button:hover{
   color: white;
@@ -754,7 +713,7 @@ header a:hover {
   box-shadow: 5px  10px 20px #000;
   padding: 20px 10px;
   text-align: center;
-  width: 20%; 
+  width: 20%;
 }
 .plan-gold h3{
   margin: 0px 10px;
@@ -776,7 +735,7 @@ header a:hover {
   font-weight: bold;
   padding: 10px;
   border-radius: 15px;
-  text-align: center;  
+  text-align: center;
   width: 65%;
   background-color: rgba(0, 0, 0, 0.932);;
   margin-top: 50%;
@@ -785,7 +744,7 @@ header a:hover {
   color: white;
   padding-top: 10px;
   text-align: start;
-  padding-left: 15px;   
+  padding-left: 15px;
 }
 .plan-gold button:hover{
   color: white;
@@ -819,7 +778,7 @@ header a:hover {
   font-weight: bold;
   padding: 10px;
   border-radius: 15px;
-  text-align: center;  
+  text-align: center;
   width: 65%;
   background-color: rgba(0, 0, 0, 0.932);;
   margin-top: 10%;
@@ -828,7 +787,7 @@ header a:hover {
   color: white;
   padding-top: 10px;
   text-align: start;
-  padding-left: 15px;   
+  padding-left: 15px;
 }
 .plan-platinum button:hover{
   color: white;
@@ -924,6 +883,23 @@ span {
 
 }
 
+@media (max-width: 800px) {
+
+  .titulo-actividades h3 {
+    padding-top: 50px;
+    text-align: center;
+    font-size: 45px;
+  }
+}
+@media (max-width: 600px) {
+
+  .titulo-actividades h3 {
+    padding-top: 50px;
+    text-align: center;
+    font-size: 45px;
+  }
+}
+/* preguntas frecuentes */
 
 .container-preguntas {
   display: flex;
@@ -1043,7 +1019,7 @@ span {
 
 @media (max-width: 800px) {
   .beneficios-card {
-    
+
     display: flex;
     justify-content: center;
     align-items: center;
